--- a/k8s/petclinic_chart/templates/mysql-server-service.yaml
+++ b/k8s/petclinic_chart/templates/mysql-server-service.yaml
@@ -9,4 +9,4 @@ metadata:
   name: mysql-server
 spec:
   type: ExternalName
-  externalName: petclinicprod.cbanmzptkrzf.us-east-1.rds.amazonaws.com 
+  externalName: petclinico.cbanmzptkrzf.us-east-1.rds.amazonaws.com
